front page page

--- a/Google Bard Gruvbox Light.css
+++ b/Google Bard Gruvbox Light.css
@@ -1,7 +1,7 @@
         /* ==UserStyle==
-@name         Google Bard Gruvbox Light
+@name         Google Bard Gruvbox Dark
 @namespace    github/bilalazh
-@version      1.0.0
+@version      1.0.1
 @description  "A Dark Theme for Google Bard \"bard.google.com\""
 @author       heybilalazhar@gmail.com
 @license      NO-REDISTRIBUTION==/UserStyle== */
@@ -13,7 +13,7 @@
   --ani-rbw2-col: #2cedb3;
 }
     
-    /*FRONT PAGE CHANGES GO HERE*/
+    /*FRONT PAGE CHANGES GO HERE */
     /*HELLO AGAIN H! HEADING*/
     /* Recommended to use h1 selector */
   h1 {
@@ -23,20 +23,20 @@
     /*H2 color change */
     /*Tell me What's on your mind  */
 h2 {
-    color: #282828 !important;
+    color: #665c54 !important;
 }
 
     /*Prompts Containter backgound color*/
 div.prompt-example{
   /* CSS styles for the prompt suggestion card element */
-    background-color: #427b58 !important;
+    background-color: #fabd2f !important;
 }
 
     
   
  /*Prompt Suggestion Color*/   
     :root .dark-theme .gmat-mdc-chip.mat-mdc-chip .mdc-evolution-chip__text-label{
-        color:#fb4934;
+        color:#fabd2f;
     }
     
 /*Selected all three UNDDERSTAND < CREATE < EXPLORE< */
@@ -46,14 +46,14 @@ div.prompt-example{
     background: none !important;
     -webkit-background-clip: initial !important;
     background-clip: initial !important;
-    color: #f2e5bc !important;
+    color: rgb(35, 35, 35) !important;
     text-fill-color: initial !important;
 }
 
     
  /*sugested prompts property color*/
     .mat-mdc-chip-action-label {
-    color: #ebdbb2 !important;
+    color: #fabd2f !important;
 }
 
         /*SUGGESTED PROMPTS BUTTON*/
@@ -61,7 +61,7 @@ div.prompt-example{
 /*Suggested Prompts Button color */
     /*Added custom roundess to the button as well*/
 .mdc-evolution-chip__action {
-    background-color: #232323 !important;
+    background-color: rgb(35, 35, 35) !important;
     border-radius: 25px !important;
 }
 
@@ -73,7 +73,7 @@ div.prompt-example{
     /*Baclground color of the chat container*/
     /*Breaks often */
    .chat-container {
-    background-color: #f2e5bc !important;
+    background-color: #d6bc8c !important;
 }
 
     
@@ -86,13 +86,13 @@ div.prompt-example{
     /*Old chats color*/
     /*Sidebar conversations color fixed as well */
     .conversation-title {
-    color: #333 !important;
+    color: rgb(35, 35, 35) !important;
 }
 
 /*The selextion color of the convo */
     /*Old ugly green color will be replaced here */
 .conversation.selected {
-    background-color: #665c54 !important;
+    background-color: #666363 !important;
 }
 
     
@@ -152,28 +152,31 @@ location-footer.ng-star-inserted {
         opacity:0.5 ;
     }
     /*Bard experiment hidden*/
-.gb_Jc .gb_ad .gb_Hc:not(.gb_Hd) {
+.gb_Kc {
+    visibility : hidden !important; 
     opacity: 0 !important ; 
 }
    
     
     /* Change the background color of the header */
 header.gb_Ka {
-  background-color: #d5c4a1 !important; /* Green background */
+  background-color: #666363 !important; /* Green background */
 }
 
-/* Change the font and z-index of the header */
-.gb_bb:not(.gb_dd) {
-  font: 16px/30px 'Arial', sans-serif !important;
-  z-index: 999 !important;
-}
 
 /* Style for the fixed position header */
-.gb_md {
+.gb_od {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #333; /* Dark background */
+  background-color: #d5c4a1; /* Dark background */
+}
+
+.gb_od:hover {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #d1bca8; /* Dark background */
 }
 
   
@@ -198,7 +201,7 @@ header.gb_Ka {
 }
 
     div.markdown.markdown-main-panel ol li:hover, div.markdown.markdown-main-panel ul li:hover {
-    color: #babd1c !important;
+    color: #232323 !important;
 }
 
     
@@ -208,7 +211,7 @@ header.gb_Ka {
 .markdown[_ngcontent-ng-c2853002834] ul li:hover {
     
     /* Change to your desired margin */
-    color: #babd1c !important
+    color: #fb4934 !important
     
 }
 /* Hover Effect */
@@ -216,7 +219,7 @@ header.gb_Ka {
 div.markdown>p:hover,
 /* ... other selectors ... */ 
 .mat-icon.notranslate.mat-mdc-list-item-icon.google-symbols.mat-icon-no-color.mdc-list-item__start:hover {
-    color: #babd1c !important;  /* Change to your desired hover color */
+    color: #d5c4a1 !important;  /* Change to your desired hover color */
 }
 
     
@@ -249,7 +252,7 @@ div.markdown>p:hover,
     /*Markdown table bottom bar */
     .table-block[_ngcontent-ng-c3151600046] .table-footer[_ngcontent-ng-c3151600046] {
    
-    background-color: #fabd2f;
+    background-color: #993c3c;
     padding-right: 8px;
     border-top: 1px solid var(--bard-color-outline-variant);
 }
@@ -285,23 +288,21 @@ div.markdown>p:hover,
     /*Left chat history panel chat titles colors*/
     /*Conversation container*/
     
-         .response-container {
-       background-color: #f2e5bc !important;* Change to your desired color */
-       /* Other styles */
-     }
-     ```
-
+ .conversations-container[_ngcontent-ng-c3480531823] .conversation[_ngcontent-ng-c3480531823], .conversations-container[_ngcontent-ng-c3480531823] .show-more-button[_ngcontent-ng-c3480531823] {
+   color:#fbf1c7;
+}   
+    
 
     /*Chat container*/
     
 
    .chat-container.at-least-mobile-large[_ngcontent-ng-c3497705168]{
-        color:#ebdbb2; 
+        color:#fbf1c7 !important ; 
     }
     
     /*Bard response color*/
 .model-response-text[_ngcontent-ng-c1694622410] {
-    color: #ebdbb2;
+    color: #fb4934 !important;
 }    
 
     /*Hide the location icon*/
@@ -311,36 +312,28 @@ div.markdown>p:hover,
     
     /*Trying lines being highlighted */
     
-    
-    
-    
 
 
 .gb_Bd.gb_Rd.gb_Id.gb_Hd, mat-sidenav, .mat-mdc-list-item.mdc-list-item.mat-mdc-list-item-interactive.mdc-list-item--with-leading-icon.mat-mdc-list-item-single-line.mdc-list-item--with-one-line, div.card,.mat-mdc-text-field-wrapper.mdc-text-field.ng-tns-c491895417-1.mdc-text-field--outlined.mdc-text-field--no-label,mat-form-field, .mat-expansion-panel.model-response-previews.ng-star-inserted, .multi-response-container, .response-container.ng-star-inserted, .mat-expansion-panel.model-response-previews.ng-tns-c3728856580-9.ng-star-inserted, .mat-expansion-panel.ng-star-inserted.mat-expanded.mat-expansion-panel-spacing, mat-expansion-panel-header, .mat-expansion-panel-body,.waitlist-text.top-text,.waitlist-text.bottom-text,chat-window.ng-star-inserted,.main,flex-window-container.ng-star-inserted,faq-window.ng-star-inserted>flex-window-container,.footer.ng-star-inserted,.mat-drawer-content.mat-sidenav-content{
-  background-color: #ebdbb2 !important;
+  background-color: #fbf1c7 !important;
 }
 /* main text in the editor */
     
     
 .chat-history.ng-star-inserted>div>user-query>div>div>h2,div.markdown>p, .mat-mdc-list-item.mdc-list-item.mat-mdc-list-item-interactive.mdc-list-item--with-leading-icon.mat-mdc-list-item-single-line.mdc-list-item--with-one-line>span>span, .mat-icon.notranslate.mat-mdc-list-item-icon.google-material-icons.mat-icon-no-color.mdc-list-item__start,.mat-drawer-inner-container.ng-tns-c1668312745-0>mat-nav-list>button>span>span, .mat-drawer-inner-container.ng-tns-c1668312745-0>mat-nav-list>button>mat-icon, .response-container.ng-star-inserted>div>div>zero-state>div,.sentence-prefix, textarea,.mat-panel-title-wrapper,.mat-mdc-menu-content.mdc-list>div>button>mat-icon.mat-icon.notranslate.google-material-icons.mat-icon-no-color,.mat-mdc-menu-item.mat-mdc-focus-indicator.mdc-list-item.ng-star-inserted>mat-icon,.mat-mdc-tooltip-trigger.copy-button.mdc-icon-button.mat-mdc-icon-button.gmat-mdc-button-with-prefix.mat-unthemed.mat-mdc-button-base.gmat-mdc-button,.mat-icon.notranslate.mat-mdc-list-item-icon.google-symbols.mat-icon-no-color.mdc-list-item__start{
-  color: #babd1c !important;
+  color: rgb(35, 35, 35) !important;
 }
     
     
-    /* Bulleted text colors */
-    .markdown ol li, .markdown ul li {
-    margin-bottom: 10px;
-         color: #232323 !important ;
-}
 
 /* Recent , caution and bard may display inaccurate information buttons*/
     ul, .gmat-overline, li:before, .gmat-caption {
-    color: #f2e5bc !important;
+    color: #fb4934 !important;
 }
     
     /*BARD privacy notice link */
-    .footer-privacy-notice-link[_ngcontent-ng-c808748928] {
-    color: #477774f5;
+    .footer-privacy-notice-link {
+    color: #fb4934 !important;
 }
     
     
@@ -383,7 +376,7 @@ code,.faq-button-ogb{
     
     
     body, .mat-drawer-inner-container.ng-tns-c1668312745-0, .mat-mdc-nav-list.mat-mdc-list-base.mdc-list.gmat-body-2.nav-items.ng-tns-c1668312745-0.gmat-mdc-list.ng-star-inserted > button, .factuality-container, .mat-mdc-menu-content.mdc-list {
-    background-color: #f2e5bc !important;
+    background-color: #d6bc8c !important;
         
 
         
@@ -462,9 +455,14 @@ code,.faq-button-ogb{
 
 /*code functions param*/
 .hljs-params {
-    color: #fb4934 !important;
+    color: #ff422c !important;
 }
 
+        .code-block , code {
+   color : white !important ; 
+    background-color: white !important;
+   
+}
 
    
 
@@ -506,26 +504,23 @@ code,.faq-button-ogb{
 /*Set the table footer to black*/
     /*Makes export to sheets and other text more prominent here*/
 .table-footer {
-    background-color: #8ec07c !important;
+    background-color: rgb(35, 35, 35) !important;
 }
     /*Markdown table top border color is changed to suit the dark theme beter*/
     /*Text color of the heading tr is changed as well*/
     
     .markdown table th{
         color : #babd1c !important;
-        background-color: #ebdbb2 !important;
+        background-color: #232323 !important;
     }
 
 
 
     
-
     }
-
-    
-    
+ 
 }
-
+    
 
 
 
