--- a/Google Bard Gruvbox Light.css
+++ b/Google Bard Gruvbox Light.css
@@ -60,6 +60,8 @@ div.prompt-example{
     padding: 0;
     counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
 }
+    
+    
     /*Button black */
     /* new cchat button upper there too */
     span.gmat-subtitle-2{
@@ -380,7 +382,9 @@ div.markdown>p:hover,
     
     
     
-    
+  h1 , h2  , h3 , h4 ,  h5,  h6 {
+  color : #282828 !important ; 
+}
     
     
 
